--- a/student.ipynb
+++ b/student.ipynb
@@ -18,25 +18,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Business Overview\n",
+    "# <span style=\"color: Green;\">Data Introduction Summmary</span>\n",
     "\n",
-    "#Highlight stakeholder and business problem"
+    "## <span style=\"color: lightGreen;\">Introduce Data before presenting it in code below</span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data Introduction Summmary\n",
-    "\n",
-    "#Introduce Data before presenting it in code below"
+    "##### First step is to import pandas and matplot lib in order to run the code needed to analyze the data."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing Pandas and Opening Datafile to Inspect and analyze elements"
+    "## <span style=\"color: forestGreen;\">Importing Pandas and Opening Datafile to Inspect and analyze elements</span>"
    ]
   },
   {
@@ -487,7 +485,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After viewing the layout of the data, it is time to further filter and identify the different columns and datatypes of the file"
+    "### <span style=\"color: skyblue;\">After viewing the layout of the data, it is time to further filter and identify the different columns and datatypes of the file</span>.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -579,7 +579,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, most columns are objects, with a few float64 (integer) columns.  Now, I will create an adittional column titled \"Total Injuries\" that acts as a weighted measure of total fatal injuries, total serious injuries, and total minor injuries."
+    "### As we can see, most columns are objects, with a few float64 (integer) columns.  Now, I will create an adittional column titled \"Total Injuries\" that acts as a weighted measure of total fatal injuries, total serious injuries, and total minor injuries."
    ]
   },
   {
@@ -648,7 +648,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First step- analyze number of total injuries per Number of Engines."
+    "# <span style=\"color: brown;\">Data Analysis</span>\n",
+    "### At this step in the process, we will begin compartmentalizing data and taking detailed looks at each aspect we want to investigate further in order to discover appropriate stakeholder solutions.  \n",
+    "#### First step- analyze number of total injuries per Number of Engines."
    ]
   },
   {
@@ -747,7 +749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create Visualization highlighting above analysis"
+    "#### Create Visualization highlighting above analysis"
    ]
   },
   {
@@ -794,7 +796,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Analyzing Safest and Most Injury Producing Commercial and Military Aircrafts\n"
+    "### Analyzing Safest and Most Injury Producing Commercial and Military Aircrafts\n",
+    "\n",
+    "#### Next step is to filter further and investigate the most dangerous Commercial and Military Aircrafts.  The assumption being made is that most aircrafts with over 2 engines are commercial and military, also based on the Make (Airbus and Boeing are commercial, Lockheed is military)"
    ]
   },
   {
@@ -1223,6 +1227,13 @@
     "grouped_data.sort_values(by=('Injury Percentage'), ascending=False)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Replace all duplicate values"
    ]
   },
   {
@@ -2041,7 +2052,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FIlter out Outliers (any Makes with only 1 incident)"
+    "#### FIlter out Outliers (any Makes with only 1 incident)"
    ]
   },
   {
@@ -2202,7 +2213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct Graph visualizing above findings on Commercial and Military Aircrafts with highest Injury Percentage with at least 4 total incidents"
+    "#### Construct Graph visualizing above findings on Commercial and Military Aircrafts with highest Injury Percentage with at least 4 total incidents"
    ]
   },
   {
@@ -2237,14 +2248,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above graph shows that Boeing aircrafts have the highest injury percentage per crash with both 3 and 4 engine planes. Mcdonnell Douglas also has a high injury percentage with their 4 engine aircrafts.  A business takeaway from this display could be to go with AIRBUS for commercial and Lockheed for Military, respectively."
+    "##### The above graph shows that Boeing aircrafts have the highest injury percentage per crash with both 3 and 4 engine planes. Mcdonnell Douglas also has a high injury percentage with their 4 engine aircrafts.  A business takeaway from this display could be to go with AIRBUS for commercial and Lockheed for Military, respectively."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next task is to filter the data to display highest injury rates per non commercial and military aircrafts."
+    "##### The next task is to filter the data to display highest injury rates per non commercial and military aircrafts."
    ]
   },
   {
@@ -2456,7 +2467,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Display Count of each Make with 2 or less Engines based on Total Injuries and Total Incidents and filter out any makes with incident count less than 500."
+    "##### Display Count of each Make with 2 or less Engines based on Total Injuries and Total Incidents and filter out any makes with incident count less than 500."
    ]
   },
   {
@@ -2649,7 +2660,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Visualize the above data in a graph best fitting"
+    "##### Visualize the above data in a graph best fitting"
    ]
   },
   {
@@ -2751,14 +2762,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Above cell shows that amongst personal aircrafts (2 engines or less), Cessnas have the most total injuries but also the most total incidents, meaning Cessna's are used much more frequently.  The results also show that although Cessna's have the most total injuries, Cessna's overall injury perentage is much lower than the other Aircraft Make's with both 1 and 2 engines, including Cessna 2 Engine Planes. Thus, a conclusion could be made that Cessna 1 engine aircrafts are the safest to use."
+    "##### The Above cell shows that amongst personal aircrafts (2 engines or less), Cessnas have the most total injuries but also the most total incidents, meaning Cessna's are used much more frequently.  The results also show that although Cessna's have the most total injuries, Cessna's overall injury perentage is much lower than the other Aircraft Make's with both 1 and 2 engines, including Cessna 2 Engine Planes. Thus, a conclusion could be made that Cessna 1 engine aircrafts are the safest to use."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3: Analyze data to show highest rates of injuries among Phase of Flights\n"
+    "## Step 2-  Analyze data to show highest rates of injuries among Phase of Flights\n",
+    "\n",
+    "#### Next, we will analyze safest and most dangerous aircrafts based on Phases of flight (Cruise, Takeoff, Maneuvering, Landing, etc)\n"
    ]
   },
   {
@@ -2920,7 +2933,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create Visualization of above Data on Broad Phase of Flights"
+    "### Create Visualization of above Data on Broad Phase of Flights"
    ]
   },
   {
@@ -2964,7 +2977,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have a general outline of Injury percentages based on phase of flight, we are going to delve deeper and filter the data by make and number of engines.  The idea behind this is to understand which Aircrafts have the highest and lowest injury percentage per phase of flight in order to determine an appropriate resolution for stakeholders."
+    "### Now that we have a general outline of Injury percentages based on phase of flight, we are going to delve deeper and filter the data by make and number of engines.  The idea behind this is to understand which Aircrafts have the highest and lowest injury percentage per phase of flight in order to determine an appropriate resolution for stakeholders."
    ]
   },
   {
@@ -3161,7 +3174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filter dataframe \"phase counts\" for Total Incidents over 1000 to remove outliers "
+    "#### Filter dataframe \"phase counts\" for Total Incidents over 1000 to remove outliers "
    ]
   },
   {
@@ -3448,7 +3461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot visalization to display Total Injuries combined with average Injury Percentage for all phases of flights for both Cessna and Piper"
+    "#### As the bar graph above shows, Cessna and Piper have both the most different phases of flight as well as the highest injury percentages.  Thus, we are going to plot a visalization to display Total Injuries combined with average Injury Percentage for all phases of flights for both Cessna and Piper."
    ]
   },
   {
@@ -3491,14 +3504,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the above data and charts, Cessna has a higher overall injury percentage for the 5 most prevalent common phases of flight.  One may also deduce that, based on the findings, both Cessna and Piper are safest with their landing procedures, as both have the highest incident count and lowest injury totals for all \"landing\" phases of flight.  Contrastingly, Cessna's \"Maneuvering\" phase of flight has the highest injury percentage by far with the lowest amount of incidents.  Apart of \"Maneuvering\" resulting in many injuries, it appears that the \"Cruise\" phase of flight results in a large percentage of injuries for both Cessna and Piper, with Cessna's largest amount of injuries and second highest percentage all coming from flights in the \"Cruise\" phase of flight."
+    "### Based on the above data and charts, Cessna has a higher overall injury percentage for the 5 most prevalent common phases of flight.  \n",
+    "#### One may also deduce that, based on the findings, both Cessna and Piper are safest with their landing procedures, as both have the highest incident count and lowest injury totals for all \"landing\" phases of flight.  \n",
+    "\n",
+    "### Contrastingly, Cessna's \"Maneuvering\" phase of flight has the highest injury percentage by far with the lowest amount of incidents.  \n",
+    "#### Apart of \"Maneuvering\" resulting in many injuries, it appears that the \"Cruise\" phase of flight results in a large percentage of injuries for both Cessna and Piper, with Cessna's largest amount of injuries and second highest percentage all coming from flights in the \"Cruise\" phase of flight."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create Final Analysis on Injuries based on Engine Type"
+    "## Next, an Analysis on Injuries based on Engine Type"
    ]
   },
   {
@@ -3672,7 +3689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create Visualization to display above initial findings"
+    "### Create Visualization to display above initial findings"
    ]
   },
   {
@@ -3727,7 +3744,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Investigate further by analyzing total injuries, incidents, and injury percentage by engine type with make and number of engines"
+    "### Investigate further by analyzing total injuries, incidents, and injury percentage by engine type with make and number of engines"
    ]
   },
   {
@@ -4044,7 +4061,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filter overall results by best fitting cases which, in this instance, is Total Injuries over 200"
+    "### Filter overall results by best fitting cases which, in this instance, is Total Injuries over 200"
    ]
   },
   {
@@ -4295,7 +4312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Filter by Total Injuries, High to low"
+    "### Filter by Total Injuries, High to low"
    ]
   },
   {
@@ -4658,7 +4675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create visualization to represent "
+    "### Create visualization to represent "
    ]
   },
   {
@@ -4737,26 +4754,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on the above data on enginge types, although Cessna Reciprocating 1 engine planes have the most injuries, they appear to also be the safest to fly based on the amount of incidents and resulting low injury percentage (just under 30%)"
+    "#### Based on the above data on enginge types, although Cessna Reciprocating 1 engine planes have the most injuries, they appear to also be the safest to fly based on the amount of incidents and resulting low injury percentage (just under 30%)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion\n",
+    "# Conclusion\n",
     "\n",
     "\n",
-    "The main takeaways one could assume based on the above data and visualizations are as follows:\n",
+    "## The main takeaways one could assume based on the above data and visualizations are as follows:\n",
     "\n",
-    "-Airbus appears to be the safest choice for Commercial Airline travel and Lockheed for Military Travel/Transport, as Boeing and Mcdonnell Douglas both have high injury percentages for multiple engine type air carriers.\n",
+    "#### -Airbus appears to be the safest choice for Commercial Airline travel and Lockheed for Military Travel/Transport, as Boeing and Mcdonnell Douglas both have high injury percentages for multiple engine type air carriers.\n",
     "\n",
-    "-Cessna 1 Engine and both Cessna and Piper 2 Engine appear to be the safest choices for personal aircraft travel, with Cessna 1 engine planes having a high injury total but the lowest injury percentage, and Cessna and Piper 2 engine planes having the lowest injury percentage amongst the respective group.  \n",
+    "#### -Cessna 1 Engine and both Cessna and Piper 2 Engine appear to be the safest choices for personal aircraft travel, with Cessna 1 engine planes having a high injury total but the lowest injury percentage, and Cessna and Piper 2 engine planes having the lowest injury percentage amongst the respective group.  \n",
     "\n",
-    "-When it comes to phase of flight, both Cessna and Piper are safest with their landing procedures, as both have the highest incident count and lowest injury totals for all \"landing\" phases of flight.  Contrastingly, Cessna's \"Maneuvering\" phase of flight has the highest injury percentage by far with the lowest amount of incidents.  Apart of \"Maneuvering\" resulting in many injuries, it appears that the \"Cruise\" phase of flight results in a large percentage of injuries for both Cessna and Piper, with Cessna's largest amount of injuries and second highest percentage all coming from flights in the \"Cruise\" phase of flight.\n",
-    "    -One solution to this issue would be to implement more training programs for pilots pertaining to the \"Maneuvering\" phase of flight, as Cessna aircrafts have the highest injury percentage in this phase by far.  \n",
+    "#### -When it comes to phase of flight, both Cessna and Piper are safest with their landing procedures, as both have the highest incident count and lowest injury totals for all \"landing\" phases of flight.  Contrastingly, Cessna's \"Maneuvering\" phase of flight has the highest injury percentage by far with the lowest amount of incidents.  Apart of \"Maneuvering\" resulting in many injuries, it appears that the \"Cruise\" phase of flight results in a large percentage of injuries for both Cessna and Piper, with Cessna's largest amount of injuries and second highest percentage all coming from flights in the \"Cruise\" phase of flight.    \n",
+    "##### -One solution to this issue would be to implement more training programs for pilots pertaining to the \"Maneuvering\" phase of flight, as Cessna aircrafts have the highest injury percentage in this phase by far.  \n",
     "\n",
-    "-Finally, regarding engine type, although Cessna Reciprocating 1 engine planes have the most injuries, they appear to also be the safest to fly based on the amount of incidents and resulting low injury percentage (just under 30%)"
+    "#### -Finally, regarding engine type, although Cessna Reciprocating 1 engine planes have the most injuries, they appear to also be the safest to fly based on the amount of incidents and resulting low injury percentage (just under 30%)"
    ]
   }
  ],
