--- a/student.ipynb
+++ b/student.ipynb
@@ -1254,21 +1254,32 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
+    "This analysis has led to several key insights and recommendations for considering the expansion into the aviation industry, specifically focusing on the purchase and operation of aircraft for commercial and private purposes:\n",
+    "\n",
+    "**Personal Aircraft Selection:** Analysis of injury data for aircraft with a \"personal\" phase of flight has identified Cessna (single-engine) and Piper (dual-engine) as the makes with the lowest injury percentages. These findings suggest that these aircraft types present the lowest risk and are recommended for selection in expanding into the aviation sector.\n",
+    "\n",
+    "**Commercial and Military Aircraft Selection:** Injury data for aircrafts with 2 or more engines (designated as commercial and military for this analysis), Boeing aircrafts have the highest injury percentage per crash with both 3 and 4 engine planes. Mcdonnell Douglas also has a high injury percentage with their 4 engine aircrafts.  \n",
+    "\n",
+    "A concrete business takeaway from this display could be to go with AIRBUS for commercial and Lockheed for Military, respectively.\n",
+    "\n",
+    "**Phase of Flight Safety Analysis:** By aggregating and analyzing total injuries and incidents by flight phase, the study offers valuable insights into which phases of flight (e.g., Cruise, Takeoff, Maneuvering, Landing) are most associated with injuries. This information is critical for developing targeted safety protocols and training programs to mitigate risks during identified high-risk flight phases.\n",
     "\n",
     "\n",
-    " The main takeaways one could assume based on the above data and visualizations are as follows:\n",
+    "**Engine Type:** Although Cessna Reciprocating 1 engine planes have the most injuries, they appear to also be the safest to fly based on the amount of incidents and resulting low injury percentage (just under 30%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Next Steps\n",
+    "To further refine the company's approach to entering the aviation industry and ensure a well-informed decision-making process, the following analyses are recommended:\n",
     "\n",
-    "-Airbus appears to be the safest choice for Commercial Airline travel and Lockheed for Military Travel/Transport, as Boeing and Mcdonnell Douglas both have high injury percentages for multiple engine type air carriers.\n",
+    "**Comprehensive Risk Assessment by Aircraft Make and Model:** Extend the analysis to include a broader range of aircraft makes and models, considering other factors such as maintenance history, age of aircraft, and historical performance under different operational conditions.\n",
     "\n",
-    "-Cessna 1 Engine and both Cessna and Piper 2 Engine appear to be the safest choices for personal aircraft travel, with Cessna 1 engine planes having a high injury total but the lowest injury percentage, and Cessna and Piper 2 engine planes having the lowest injury percentage amongst the respective group.  \n",
+    "**Advanced Modeling for Predicting Accidents and Injuries:** Utilize machine learning models to predict the likelihood of accidents and injuries based on a comprehensive set of variables, including aircraft characteristics, flight conditions, pilot experience, and environmental factors.\n",
     "\n",
-    "-When it comes to phase of flight, both Cessna and Piper are safest with their landing procedures, as both have the highest incident count and lowest injury totals for all \"landing\" phases of flight.  Contrastingly, Cessna's \"Maneuvering\" phase of flight has the highest injury percentage by far with the lowest amount of incidents.  \n",
-    "\n",
-    "-Apart of \"Maneuvering\" resulting in many injuries, it appears that the \"Cruise\" phase of flight results in a large percentage of injuries for both Cessna and Piper, with Cessna's largest amount of injuries and second highest percentage all coming from flights in the \"Cruise\" phase of flight.    \n",
-    "\n",
-    "-One solution to this issue would be to implement more training programs for pilots pertaining to the \"Maneuvering\" phase of flight, as Cessna aircrafts have the highest injury percentage in this phase by far.  \n",
-    "\n",
-    "-Finally, regarding engine type, although Cessna Reciprocating 1 engine planes have the most injuries, they appear to also be the safest to fly based on the amount of incidents and resulting low injury percentage (just under 30%)"
+    "**Evaluation of Training and Safety Programs:** Assess the effectiveness of existing training and safety programs across different phases of flight and for various aircraft makes and models. This could help in developing specialized training programs aimed at reducing the risk of injuries and accidents."
    ]
   }
  ],
