--- a/student.ipynb
+++ b/student.ipynb
@@ -1254,18 +1254,28 @@
    "metadata": {},
    "source": [
     "## Conclusion\n",
+    "\n",
     "This analysis has led to several key insights and recommendations for considering the expansion into the aviation industry, specifically focusing on the purchase and operation of aircraft for commercial and private purposes:\n",
     "\n",
-    "**Personal Aircraft Selection:** Analysis of injury data for aircraft with a \"personal\" phase of flight has identified Cessna (single-engine) and Piper (dual-engine) as the makes with the lowest injury percentages. These findings suggest that these aircraft types present the lowest risk and are recommended for selection in expanding into the aviation sector.\n",
+    "**Personal Aircraft Selection:** \n",
     "\n",
-    "**Commercial and Military Aircraft Selection:** Injury data for aircrafts with 2 or more engines (designated as commercial and military for this analysis), Boeing aircrafts have the highest injury percentage per crash with both 3 and 4 engine planes. Mcdonnell Douglas also has a high injury percentage with their 4 engine aircrafts.  \n",
+    "Analysis of injury data for aircraft with a \"personal\" phase of flight has identified Cessna (single-engine) and Piper (dual-engine) as the makes with the lowest injury percentages. \n",
+    "* These findings suggest that these aircraft types present the lowest risk and are recommended for selection in expanding into the aviation sector.\n",
     "\n",
-    "A concrete business takeaway from this display could be to go with AIRBUS for commercial and Lockheed for Military, respectively.\n",
+    "**Commercial and Military Aircraft Selection:** \n",
     "\n",
-    "**Phase of Flight Safety Analysis:** By aggregating and analyzing total injuries and incidents by flight phase, the study offers valuable insights into which phases of flight (e.g., Cruise, Takeoff, Maneuvering, Landing) are most associated with injuries. This information is critical for developing targeted safety protocols and training programs to mitigate risks during identified high-risk flight phases.\n",
+    "Injury data for aircrafts with 2 or more engines (designated as commercial and military for this analysis), Boeing aircrafts have the highest injury percentage per crash with both 3 and 4 engine planes. Mcdonnell Douglas also has a high injury percentage with their 4 engine aircrafts.\n",
+    "* A concrete business takeaway from this display could be to go with AIRBUS for commercial and Lockheed for Military, respectively.\n",
+    "\n",
+    "**Phase of Flight Safety Analysis:** \n",
+    "\n",
+    "By aggregating and analyzing total injuries and incidents by flight phase, the study offers valuable insights into which phases of flightare most associated with injuries.\n",
+    "* Cruise, Takeoff, and Maneuvering phases of flight produce the highest injury rate \n",
     "\n",
     "\n",
-    "**Engine Type:** Although Cessna Reciprocating 1 engine planes have the most injuries, they appear to also be the safest to fly based on the amount of incidents and resulting low injury percentage (just under 30%)"
+    "**Engine Type:** \n",
+    "\n",
+    "* Although Cessna Reciprocating 1 engine planes have the most injuries, they appear to also be the safest to fly based on the amount of incidents and resulting low injury percentage (just under 30%)"
    ]
   },
   {
@@ -1275,11 +1285,17 @@
     "### Next Steps\n",
     "To further refine the company's approach to entering the aviation industry and ensure a well-informed decision-making process, the following analyses are recommended:\n",
     "\n",
-    "**Comprehensive Risk Assessment by Aircraft Make and Model:** Extend the analysis to include a broader range of aircraft makes and models, considering other factors such as maintenance history, age of aircraft, and historical performance under different operational conditions.\n",
+    "**Comprehensive Risk Assessment by Aircraft Make and Model:** \n",
     "\n",
-    "**Advanced Modeling for Predicting Accidents and Injuries:** Utilize machine learning models to predict the likelihood of accidents and injuries based on a comprehensive set of variables, including aircraft characteristics, flight conditions, pilot experience, and environmental factors.\n",
+    "Extend the analysis to include a broader range of aircraft makes and models, considering other factors such as maintenance history, age of aircraft, and historical performance under different operational conditions.\n",
     "\n",
-    "**Evaluation of Training and Safety Programs:** Assess the effectiveness of existing training and safety programs across different phases of flight and for various aircraft makes and models. This could help in developing specialized training programs aimed at reducing the risk of injuries and accidents."
+    "**Advanced Modeling for Predicting Accidents and Injuries:** \n",
+    "\n",
+    "Utilize machine learning models to predict the likelihood of accidents and injuries based on a comprehensive set of variables, including aircraft characteristics, flight conditions, pilot experience, and environmental factors.\n",
+    "\n",
+    "**Evaluation of Training and Safety Programs:** \n",
+    "\n",
+    "Assess the effectiveness of existing training and safety programs across different phases of flight and for various aircraft makes and models. This could help in developing specialized training programs aimed at reducing the risk of injuries and accidents."
    ]
   }
  ],
